--- a/package.json
+++ b/package.json
@@ -32,13 +32,16 @@
     "apollo-server-express": "^3.6.7",
     "bcrypt": "^5.0.1",
     "graphql": "^16.3.0",
+    "graphql-upload": "^13.0.0",
     "mongoose": "^6.2.9",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.1",
@@ -46,7 +49,9 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jest": "27.4.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.6",
     "@types/passport-local": "^1.0.34",
