--- a/.github/workflows/master_chronos-graphql.yml
+++ b/.github/workflows/master_chronos-graphql.yml
@@ -34,7 +34,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
         with:
           name: node-app
           
-      - name: unzi artifact for deployment
+      - name: unzip artifact for deployment
         run: unzip release.zip
 
       - name: 'Deploy to Azure Web App'
