--- a/.github/workflows/master_chronos-graphql.yml
+++ b/.github/workflows/master_chronos-graphql.yml
@@ -28,7 +28,7 @@ jobs:
           npm run test --if-present
           
       - name: Zip artifact for deployment
-        run: zip -r releaze.zip * .bin
+        run: zip -r release.zip * .bin
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
