--- a/.github/workflows/master_chronos-api-sec.yml
+++ b/.github/workflows/master_chronos-api-sec.yml
@@ -25,7 +25,16 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+          
+      - name: Zip Release
+       
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          # Filename for archive
+          filename: release.zip
+          # Base path for archive files
+          path: ./dist/*
+        
       
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -53,4 +62,4 @@ jobs:
           app-name: 'chronos-api-sec'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_36A54856BB194FE3BFFE6F27A6E89C39 }}
-          package: .
+          package: release.zip
