--- a/.github/workflows/master_chronos-apis.yml
+++ b/.github/workflows/master_chronos-apis.yml
@@ -25,13 +25,23 @@ jobs:
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
+
+      - name: Zip Release
+        # You may pin to the exact commit or the version.
+        # uses: TheDoctor0/zip-release@591e9b128012d3328db6043d0d0266c3ac27f9b5
+        uses: TheDoctor0/zip-release@0.6.1
+        with:
+          # Filename for archive
+          filename: release.zip
+          # Base path for archive files
+          path: ./dist/*
+         
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: .
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -53,4 +63,4 @@ jobs:
           app-name: 'chronos-apis'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_C8FFA3E0A02D4BECA902A4A4E9054BFF }}
-          package: .
+          package: release.zip
